# openapi-chat-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  OpenAPI_Chat_Agent_API.postman_collection.json  OpenAPI_Chat_Agent_Environment.postman_environment.json  POSTMAN_COLLECTION_README.md  README.md  alembic.ini  chat_request.json  chat_request2.json  create_agent_request.json  docker-compose.yml  petstore_agent_request.json  petstore_chat1.json  postman-debug.md  postman-package.json  postman-tests.js  pyproject.toml  requirements.txt  test_comments.json  test_create_post.json  test_httpbin_headers.json  test_httpbin_hello.json  test_httpbin_ip.json  test_httpbin_param.json  test_nonexistent_post.json  test_posts_request.json  test_specific_post.json  test_users.json  test_webintel_blogs.json  test_webintel_hello.json  test_webintel_id.json  test_webintel_specific.json  test_workflow_implementation.json  webintel_agent_request.json  webintel_url_request.json
.github/workflows/: deploy.yml  postman-tests.yml
alembic/: env.py
alembic/versions/: add_auth_config_to_agents.py  add_workflow_tables_002.py
app/: main.py
app/adapters/: adk.py  callbacks.py
app/api/routes/: agents.py  auth.py  health.py  marketplace.py  workflows.py
app/core/: agent_manager.py  auth.py  config.py  openapi_parser.py  tool_builder.py  workflow_manager.py
app/database/: config.py
app/database/models/: __init__.py  agent.py  auth_token.py  user.py
app/marketplace/: __init__.py  templates.py
app/models/: agent.py  auth.py  marketplace.py
app/utils/: logging.py  security.py
scripts/: init-db.sql
