[project]
name = "openapi-chat-agent"
version = "0.1.0"
description = "PoC: Turn OpenAPI into conversational agent using Google ADK"
requires-python = ">=3.12"
authors = [ { name = "Your Name" } ]
dependencies = [
	"fastapi[standard]>=0.116.1,<1.0.0",
	# uvicorn and pydantic are included with fastapi[standard]
	"pydantic-settings>=2.4,<2.6",  # Updated upper bound
	"httpx>=0.27,<0.29",  # Updated upper bound for latest releases
	"cryptography>=42.0,<44.0",  # Updated upper bound
	"google-adk>=1.12.0",  # Keep as is since it's recent
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3,<8.4",
	"pytest-asyncio>=0.23,<0.25",  # Updated upper bound
]

[tool.uv]
index-url = "https://pypi.org/simple"